# edgeplane-homeassistant

./: .gitignore  README.md  hacs.json  pyproject.toml
custom_components/edgeplane/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  manifest.json  models.py  sensor.py  strings.json
custom_components/missioncontrol/: coordinator.py  manifest.json  strings.json
tests/: conftest.py  test_approval_gate.py  test_config_flow.py  test_coordinator_setup.py  test_coordinator_ws.py  test_entities.py  test_models.py  test_task_execution.py
