[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "hacs-missioncontrol"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["aiohttp>=3.9"]

[project.optional-dependencies]
test = [
    "pytest==8.3.5",
    "pytest-asyncio==0.24.0",
    "pytest-homeassistant-custom-component==0.13.192",
    "pytest-cov",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools.packages.find]
include = ["custom_components*"]
